# whitenoise-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SCENARIO_INSTRUCTIONS.md  STYLE.md  docker-compose.yml  flutter_rust_bridge.yaml  index.html  justfile  marmot_conversation.txt  relay-control-plane-rearchitecture.md  run_marmot_scenario.sh  rust_out  user-migration-guide.md
.github/: CODEOWNERS  actionlint.yaml
crates/whitenoise-cli/: Cargo.toml
crates/whitenoise-cli/src/cli/: README.md  config.rs  dispatch.rs  error.rs  mod.rs  protocol.rs  server.rs
crates/whitenoise-cli/src/cli/commands/: chats.rs  daemon.rs  debug.rs  groups.rs  identity.rs  keys.rs  media.rs  messages.rs  profile.rs  settings.rs
crates/whitenoise-cli/tests/: cli_e2e.rs  cli_relay_control_e2e.rs
crates/whitenoise-cli/tests/support/: cli.rs
crates/whitenoise-markdown/: Cargo.toml
crates/whitenoise-markdown/src/: ast.rs  block.rs  entity.rs  inline.rs  lib.rs  nostr.rs  scanner.rs
crates/whitenoise-markdown/tests/: golden.rs  serde_roundtrip.rs  smoke.rs  spec.rs  spec_complex.rs  unit_autolinks.rs  unit_blocks.rs  unit_code_math_refs.rs  unit_complex.rs  unit_containers.rs  unit_effects.rs  unit_emphasis.rs  unit_inlines.rs  unit_links.rs  unit_nostr.rs  unit_tables.rs
crates/whitenoise-markdown/tests/common/: mod.rs  render.rs
crates/whitenoise-markdown/tests/golden/: bare_urls.json  bare_urls.md  kitchen_sink.json  kitchen_sink.md  nested_containers.json  nested_containers.md  nostr_heavy.json  nostr_heavy.md  tables_and_math.json  tables_and_math.md  text_effects.json  text_effects.md
db_migrations/: .frozen.sha256  0016_add_explicit_file_hashes.sql  0018_accounts_groups.sql  0019_add_welcomer_to_accounts_groups.sql  0020_add_last_read_message_id_to_accounts_groups.sql  0021_add_account_type.sql  0021_add_pin_order_to_accounts_groups.sql  0022_add_language_to_app_settings.sql  0023_add_account_type.sql  0023_add_encryption_metadata_to_media_files.sql  0024_add_encryption_metadata_to_media_files.sql  0025_cached_graph_users.sql  0026_add_dm_peer_pubkey_to_accounts_groups.sql  0027_account_settings.sql  0027_consumed_key_packages.sql  0027_published_key_packages.sql  0028_add_drafts.sql  0028_published_key_packages.sql  0029_published_key_packages.sql  0030_nullable_cache_fields.sql  0031_split_cache_timestamps.sql  0032_delivery_status.sql  0032_message_delivery_status.sql  0033_relay_observability.sql  0034_relay_observability_nullable_account_scope.sql  0036_user_metadata_known_at.sql  0037_metadata_expires_at.sql  0038_add_removed_at_to_accounts_groups.sql  0039_push_notifications.sql  0040_add_muted_until_to_accounts_groups.sql  0040_push_notifications_review_fixes.sql  0041_group_push_tokens_member_identity.sql  0042_add_self_removed_to_accounts_groups.sql  0043_add_search_position_index.sql  0044_add_chat_cleared_at.sql  0044_group_push_tokens_per_server.sql  (+7 more)
(+568 files in other folders)
